@@ -304,9 +304,11 @@ for i in ${grub_mkconfig_dir}/* ; do
 done
 
 # Verify readability of ${grub_cfg}.new
-if is_path_readable_by_grub ${grub_cfg}.new ; then : ; else
-  echo "GRUB is unable to read ${grubdir}/${file}" >&2
-  exit 1   
+if test "x${grub_cfg}" != "x"; then
+  if is_path_readable_by_grub ${grub_cfg}.new ; then : ; else
+    echo "GRUB is unable to read ${grubdir}/${file}" >&2
+    exit 1   
+  fi
 fi
 
 if test "x${grub_cfg}" != "x" ; then
